# Chronograph

./: .gitignore  Cargo.toml  LICENSE  README.md  README.ru.md
.github/workflows/: ci.yml  release.yml  test-action.yml
action/: README.md  action.yml  download-and-run.sh
crates/chronograph-cli/: Cargo.toml
crates/chronograph-cli/src/: main.rs
crates/chronograph-cli/src/commands/: age.rs  analyze.rs  coupling.rs  export.rs  hotspots.rs  knowledge.rs  mod.rs  report.rs
crates/chronograph-core/: Cargo.toml
crates/chronograph-core/src/: analyze.rs  config.rs  error.rs  lib.rs  model.rs  source.rs  store.rs
crates/chronograph-git/: Cargo.toml
crates/chronograph-git/examples/: profile_analyze.rs
crates/chronograph-git/src/: lib.rs  source.rs
crates/chronograph-lang/: Cargo.toml
crates/chronograph-lang/examples/: complexity.rs
crates/chronograph-lang/src/: complexity.rs  lib.rs
crates/chronograph-metrics/: Cargo.toml
crates/chronograph-metrics/examples/: churn.rs  complexity_git.rs  coupling.rs  knowledge.rs  materialize.rs  profile.rs  sql.rs
crates/chronograph-metrics/src/: age.rs  blame_cache.rs  churn.rs  complexity.rs  config.rs  coupling.rs  hotspot.rs  knowledge.rs  lib.rs  materialize.rs  paths.rs
crates/chronograph-metrics/tests/: age.rs  blame_cache.rs  churn.rs  complexity.rs  coupling.rs  knowledge.rs  materialize.rs
crates/chronograph-report/: Cargo.toml
crates/chronograph-report/assets/: report.css
crates/chronograph-report/src/: data.rs  export.rs  lib.rs  render.rs  treemap.rs
crates/chronograph-report/tests/: export.rs  report.rs
crates/chronograph-report/tests/snapshots/: export__export_schema_snapshot.snap
crates/chronograph-store/: Cargo.toml
crates/chronograph-store/src/: lib.rs  store.rs
crates/chronograph-store/tests/: pipeline.rs
docs/en/: README.md  architecture.md  cli.md  configuration.md  faq.md  github-action.md  html-report.md  installation.md  json-export.md  metrics.md  web-ui.md
docs/ru/: README.md  architecture.md  cli.md  configuration.md  faq.md  github-action.md  html-report.md  installation.md  json-export.md  metrics.md  web-ui.md
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  load.ts  theme.css  timeline.ts  types.ts
web/src/views/: AgeView.tsx  CouplingGraph.tsx  FileTreemap.tsx  GrowthView.tsx  HotspotsView.tsx  KnowledgeView.tsx  TimelineView.tsx
