[package]
name = "chronograph-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Обход истории git через gix: sha/author/timestamp/file_changes, rename detection, инкрементальный обход."

[dependencies]
chronograph-core.workspace = true
gix.workspace = true
globset.workspace = true
# Параллельный blame по файлам (каждый blame независим). gix ThreadSafeRepository
# (Send+Sync с фичей parallel) даёт per-thread handle.
rayon.workspace = true

[dev-dependencies]
# Фикстуры строятся как временные git-репозитории (только для тестов).
tempfile = "3"
